--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                     усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали
                     некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов 11</li>
-                    <li>Объектов природного наследия ЮНЕСКО 12</li>
-                    <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li>Природных заповедников 105</li>
-                    <li>Аэропортов 241</li>
+                    <li class="intro__list-item">Часовых поясов <span class="intro__list-span">11</span></li>
+                    <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-span">12</span></li>
+                    <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-span">16</span></li>
+                    <li class="intro__list-item">Природных заповедников <span class="intro__list-span">105</span></li>
+                    <li class="intro__list-item">Аэропортов <span class="intro__list-span">241</span></li>
                 </ul>
             </section>
 
