--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
                 <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
             </ul>
-            <h3 class="footer__copyright">&copy; 2022. Shinkarenko Anton</h3>
+            <p class="footer__copyright">&copy; 2022. Shinkarenko Anton</p>
         </footer>
     </div>
 </body>
